--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "base32-encode": "^1.1.1",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
-    "dfeeds": "git+https://gitlab.com/dznt/dfeeds",
+    "dfeeds": "^0.1.2",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
-    "swarm-lowlevel": "git+https://gitlab.com/nolash/swarm-lowlevel-js",
+    "swarm-lowlevel": "^0.8.9",
     "text-encoding": "^0.7.0",
     "utf8-encoder": "^1.0.1"
   }
