--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "base32-encode": "^1.1.1",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
-    "dfeeds": "git+https://gitlab.com/significance/dfeeds#17ffe658fd24c3b9790596e8748a9edaf3d72f69",
+    "@ethersphere/bee-js": "git+https://github.com/significance/bee-js#d3beaae5aeaf0124a66fde9de77d99d8d4a714a3",
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
-    "swarm-lowlevel": "git+https://gitlab.com/significance/swarm-lowlevel-js#b175180019a55ad779485c1388c2afe5c3a5bda0",
     "text-encoding": "^0.7.0",
     "utf8-encoder": "^1.0.1"
   },
